2008-06-17  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/main.c (main): do not unref the instance of
	IMSettingsInfo during referring the information in IMSettingsInfo
	because those is the constant variable.

2008-06-12  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_manager_real_changed_dot_xinputrc):
	do not remove the hash by IM name. (Issue#9)

2008-06-11  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): check the version of the service
	and reload as needed.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-list.c (main): likewise.

	* src/factory.c (imsettings_manager_real_get_version): new.

	* src/factory_info.c (imsettings_info_manager_real_get_version): new.

	* imsettings/imsettings-request.c (imsettings_request_get_version):
	new.

	* imsettings/imsettings-observer.c (imsettings_get_version): new.

	* imsettings/imsettings.xml: Add GetVersion method.

	* imsettings/imsettings-object.c (imsettings_object_dump):
	output the type name instead of GType directly. this wasn't a portable
	way for other process.
	(imsettings_object_load_from_stream): likewise.

	* src/factory_info.c (imsettings_info_manager_validate_from_file_info):
	do not destroy an object.
	(imsettings_info_manager_validate_from_file): destroy a GFileInfo
	object.
	(main): initialize arg_homedir.

	* src/factory.c (imsettings_manager_real_start_im): Get information
	from IMSettingsInfo instead of asking through IMSettingsRequest
	every time.
	(imsettings_manager_real_stop_im): likewise.
	(imsettings_manager_real_what_im_is_running): likewise.

	* utils/imsettings-info.c (main): likewise.

	* backends/xim/main.c (main): likewise.

	* imsettings/imsettings-request.c (imsettings_request_get_info_objects):
	new for GetInfoObjects.
	(imsettings_request_get_info_object): new for GetInfoObject.
	(imsettings_request_get_xinput_filename)